fixed the statemts and the trckers

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ logs/
 
 # Sensitive configuration files
 src/main/resources/config.properties
+config.json
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
 
 # macOS
 .DS_Store
