--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=worklog-automation
 spring.thymeleaf.cache=false
 logging.level.root=INFO
 logging.level.com.kalvium=INFO
+
+# Base URL for self-ping (set this on Render using environment variable)
+app.base.url=${APP_BASE_URL:http://localhost:8080}
+
+# Enable scheduling
+spring.task.scheduling.pool.size=5
