fixed the render memory exceed limit error

--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,10 @@ services:
     plan: free
     dockerfilePath: ./Dockerfile
     autoDeploy: true
+    healthCheckPath: /health
+    envVars:
+      - key: APP_BASE_URL
+        sync: false
+      # Memory optimization: Disable unused features
+      - key: SPRING_JMX_ENABLED
+        value: "false"
