--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ logging.level.com.kalvium=INFO
 
 app.base.url=${APP_BASE_URL:http://localhost:8080}
 
+# Database Configuration (for Render, Railway, etc.)
+# Set DATABASE_URL environment variable to your PostgreSQL/Supabase connection string
+# Example: postgresql://user:password@host:port/database
+database.url=${DATABASE_URL:postgresql://postgres.wmqoeaahrnboninrihkk:sunnyreddy2809@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres}
+
 spring.task.scheduling.pool.size=2
 
 server.tomcat.threads.max=20
