Fixed PostgreSQL driver loading with Spring DataSource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,13 @@ logging.level.com.kalvium=INFO
 
 app.base.url=${APP_BASE_URL:http://localhost:8080}
 
-# Database Configuration (for Render, Railway, etc.)
+# Database Configuration (Spring Boot DataSource)
 # Set DATABASE_URL environment variable to your PostgreSQL/Supabase connection string
-# Example: postgresql://user:password@host:port/database
-database.url=${DATABASE_URL:postgresql://postgres.wmqoeaahrnboninrihkk:sunnyreddy2809@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres}
+spring.datasource.url=${DATABASE_URL:postgresql://postgres.wmqoeaahrnboninrihkk:sunnyreddy2809@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
 
 spring.task.scheduling.pool.size=2
 
