--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,33 @@ logging.level.com.kalvium=INFO
 app.base.url=${APP_BASE_URL:http://localhost:8080}
 
 # Database Configuration
-# DataSource is configured in DataSourceConfig.java
+# DataSource is configured in DataSourceConfig.java with HikariCP
 # Set DATABASE_URL environment variable in Render
 # Format: postgresql://user:password@host:port/database
 
-spring.task.scheduling.pool.size=2
+# Scheduling Configuration
+spring.task.scheduling.pool.size=3
+spring.task.scheduling.thread-name-prefix=scheduling-
 
+# Tomcat Optimization
 server.tomcat.threads.max=20
 server.tomcat.threads.min-spare=2
 server.tomcat.max-connections=50
-
 server.tomcat.connection-timeout=20000
+server.tomcat.accept-count=10
 
+# HTTP/2 Support
+server.http2.enabled=true
+
+# Compression
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+
+# Actuator
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+
+# JVM Optimizations
+spring.jmx.enabled=false
