--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.tomcat.threads.min-spare=2
 server.tomcat.max-connections=50
 server.tomcat.connection-timeout=20000
 server.tomcat.accept-count=10
-server.http2.enabled=tru
+server.http2.enabled=true
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
 management.endpoints.web.exposure.include=health
