replaced the id selectors with proper xpaths

--- a/src/main/resources/xpaths.properties
+++ b/src/main/resources/xpaths.properties
@@ -1,6 +1,6 @@
 table.main=//*[starts-with(@id, 'radix-')]/div/div[2]/table
 table.rows=//*[starts-with(@id, 'radix-')]/div/div[2]/table/tbody/tr
-table.complete.button.primary=//*[starts-with(@id, 'radix-')]/div/div[2]/table/tbody/tr/td[3]/button
+table.complete.button.primary=/html/body/div[1]/div[1]/main/div/main/div[1]/div[3]/div[2]/div/div[1]/div/div/div[2]/table/tbody/tr/td[3]/button
 table.complete.button.text=//table//tbody//tr//td//button[contains(text(), 'Complete') or contains(text(), 'complete')]
 table.complete.button.position=//table//tbody//tr//td[3]//button
 table.complete.button.first=//table//tbody//tr[1]//td//button
@@ -15,7 +15,7 @@ dropdown.option.first=/html/body/div[4]/div[2]/form/div[1]/div/select/option[1]
 dropdown.generic.select=//form//select
 dropdown.generic.button=//form//div//button
 
-editor.radix.pattern=//*[starts-with(@id, 'radix-')]/div[2]/form/div[1]/div[2]/div/div[2]/div
+editor.radix.pattern=/html/body/div[4]/div[2]/form/div[1]/div[2]/div
 editor.contenteditable.main=//div[@contenteditable='true']
 editor.contenteditable.form=//form//div[@contenteditable='true']
 editor.tiptap=//div[contains(@class, 'ProseMirror') or contains(@class, 'tiptap')]
