--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,25 +6,26 @@ logging.level.com.kalvium=INFO
 
 app.base.url=${APP_BASE_URL:http://localhost:8080}
 
+chrome.headless=${CHROME_HEADLESS:true}
+
 # Database Configuration
 # DataSource is configured in DataSourceConfig.java with HikariCP
 # Set DATABASE_URL environment variable in Render
 # Format: postgresql://user:password@host:port/database
 
-spring.task.scheduling.pool.size=3
+spring.task.scheduling.pool.size=1
 spring.task.scheduling.thread-name-prefix=scheduling-
-server.tomcat.threads.max=20
-server.tomcat.threads.min-spare=2
-server.tomcat.max-connections=50
+server.tomcat.threads.max=5
+server.tomcat.threads.min-spare=1
+server.tomcat.max-connections=20
 server.tomcat.connection-timeout=20000
-server.tomcat.accept-count=10
-server.http2.enabled=true
-server.compression.enabled=true
-server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+server.tomcat.accept-count=5
+server.http2.enabled=false
+server.compression.enabled=false
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
-management.metrics.enable.jvm=true
-management.metrics.enable.process=true
+management.metrics.enable.jvm=false
+management.metrics.enable.process=false
 spring.jmx.enabled=false
 
 notification.email=parandhama.b@kalvium.community
@@ -35,6 +36,7 @@ spring.mail.password=qwpw zgaf ptnd lrga
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=15000
+spring.mail.properties.mail.smtp.timeout=15000
+spring.mail.properties.mail.smtp.writetimeout=15000
+spring.mail.properties.mail.debug=true
