--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,15 +28,19 @@ management.metrics.enable.jvm=false
 management.metrics.enable.process=false
 spring.jmx.enabled=false
 
-notification.email=parandhama.b@kalvium.community
+# Email Configuration
+notification.email=${NOTIFICATION_EMAIL:parandhama.b@kalvium.community}
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=parandhama.b@kalvium.community
-spring.mail.password=qwpw zgaf ptnd lrga
+spring.mail.port=465
+spring.mail.username=${MAIL_USERNAME:parandhama.b@kalvium.community}
+spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=15000
-spring.mail.properties.mail.smtp.timeout=15000
-spring.mail.properties.mail.smtp.writetimeout=15000
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=30000
+spring.mail.properties.mail.smtp.timeout=30000
+spring.mail.properties.mail.smtp.writetimeout=30000
 spring.mail.properties.mail.debug=true
+
+# Set to false to disable email if SMTP is blocked
+email.enabled=${EMAIL_ENABLED:true}
