--- a/src/main/resources/xpaths.properties
+++ b/src/main/resources/xpaths.properties
@@ -1,31 +1,34 @@
+# Table XPaths
 table.main=//*[starts-with(@id, 'radix-')]/div/div[2]/table
 table.rows=//*[starts-with(@id, 'radix-')]/div/div[2]/table/tbody/tr
-table.complete.button.primary=/html/body/div[1]/div[1]/main/div/main/div[1]/div[3]/div[2]/div/div[1]/div/div/div[2]/table/tbody/tr/td[3]/button
-table.complete.button.text=//table//tbody//tr//td//button[contains(text(), 'Complete') or contains(text(), 'complete')]
-table.complete.button.position=//table//tbody//tr//td[3]//button
-table.complete.button.first=//table//tbody//tr[1]//td//button
-table.complete.button.any=//table//tbody//tr//td//button
+table.complete.button.primary=/html/body/div[1]/div[1]/main/div/main/div[1]/div[3]/div[2]/div/div[1]/div/div/div[2]/table/tbody/tr/td[3]/button/p
 
+# Form XPaths
 form.heading.worklog=//*[contains(text(), 'My Worklog') or contains(text(), 'Worklog') or contains(text(), 'worklog')]
 form.main=//form
 
+# Dropdown XPaths
 dropdown.select.main=/html/body/div[4]/div[2]/form/div[1]/div/select
 dropdown.button.main=/html/body/div[4]/div[2]/form/div[1]/div/button
 dropdown.option.first=/html/body/div[4]/div[2]/form/div[1]/div/select/option[1]
-dropdown.generic.select=//form//select
-dropdown.generic.button=//form//div//button
 
+# Editor XPaths
 editor.radix.pattern=/html/body/div[4]/div[2]/form/div[1]/div[2]/div
 editor.contenteditable.main=//div[@contenteditable='true']
 editor.contenteditable.form=//form//div[@contenteditable='true']
 editor.tiptap=//div[contains(@class, 'ProseMirror') or contains(@class, 'tiptap')]
-editor.after.dropdown=//*[starts-with(@id, 'radix-')]/ancestor::form//div[@contenteditable='true']
 
-button.submit=//button[contains(text(), 'Submit') or @type='submit']
-button.submit.type=//button[@type='submit']
-button.submit.text=//button[contains(text(), 'Submit')]
+# Tasks completed section (ul[1])
+tasks.first.item=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[1]/li[1]
+tasks.add.more=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[1]/li[2]
 
-editor.any.contenteditable=//*[@contenteditable='true']
-form.input.all=//form//input
-form.textarea.all=//form//textarea
-form.div.editable=//form//div[@contenteditable]
+# Challenges section (ul[2])
+challenges.first.item=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[2]/li[1]/p
+challenges.add.more=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[2]/li[2]
+
+# Blockers section (ul[3])
+blockers.first.item=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[3]/li[1]/p
+blockers.add.more=/html/body/div[4]/div[2]/form/div[1]/div[2]/div/div[2]/div/ul[3]/li[2]
+
+# Submit button
+button.submit=/html/body/div[4]/div[2]/form/div[2]/div/button
