--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,12 @@ spring.jmx.enabled=false
 
 notification.email=${NOTIFICATION_EMAIL:parandhama.b@kalvium.community}
 spring.mail.host=smtp.gmail.com
-spring.mail.port=465
+spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME:parandhama.b@kalvium.community}
 spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=30000
 spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=30000
