--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,17 +28,9 @@ management.metrics.enable.jvm=false
 management.metrics.enable.process=false
 spring.jmx.enabled=false
 
+# Email Configuration using Resend (HTTP-based, works in containers)
 notification.email=${NOTIFICATION_EMAIL:parandhama.b@kalvium.community}
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME:parandhama.b@kalvium.community}
-spring.mail.password=${MAIL_PASSWORD:}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=30000
-spring.mail.properties.mail.smtp.timeout=30000
-spring.mail.properties.mail.smtp.writetimeout=30000
-spring.mail.properties.mail.debug=true
-
 email.enabled=${EMAIL_ENABLED:true}
+
+resend.api.key=${RESEND_API_KEY:}
+resend.from.email=${RESEND_FROM_EMAIL:onboarding@resend.dev}
